<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seventh Lyrics Manager</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gl">Get Lyrics</string>
    <string name="menu_about">About</string>
    <string name="menu_bd">Erase Lyrics</string>
    <string name="menu_sl">Show Lyrics</string>
    <string name="menu_search">Search in Lyrics</string>
    <string name="ui_set">Set Lyrics</string>
    <string name="ui_e">Error</string>
    <string name="ui_e_id3v2">ID3v2 tag wasn\'t found</string>
    <string name="ui_e_inv_data">Invalid data</string>
    <string name="ui_e_io">IO Error</string>
    <string name="ui_e_notsup">[Not supported exception]</string>
    <string name="ui_close">Close</string>
    <string name="ui_save">Save</string>
    <string name="ui_discard">Discard</string>
    <string name="ui_nfs">No files selected</string>
    <string name="ui_selection">Selection</string>
    <string name="ui_fs">Files selected</string>
    <string name="ui_search">Search</string>
    <string name="ui_sil">Search in lyrics</string>
    <string name="ui_textcopied">The text has been copied to clipboard</string>
    <string name="ui_saved">Saved</string>
    <string name="ui_aborted">Aborted</string>
    <string name="ui_erasing">Erasing&#8230;</string>
    <string name="ui_processing">Processing&#8230;</string>
    <string name="ui_processed">Processed</string>
    <string name="ui_er_done">The work is done.</string>
    <string name="ui_ok">OK</string>
    <string name="ui_exist">Lyrics already exist. Ignored</string>
    <string name="ui_lnotfound">Lyrics not found</string>
    <string name="ui_done">Done!</string>
    <string name="ui_downed">Downloaded</string>
    <string name="ui_ignored">Ignored due to existing lyrics</string>
    <string name="ui_notfound">Not found</string>
    <string name="ui_sumtotal">Sum total</string>
    <string name="ui_loading">Loading&#8230;</string>
    <string name="ui_lyrhere">Files with lyrics containing the query will be shown here</string>
    <string name="ui_searching">Searching&#8230;</string>
    <string name="ui_foundlyrshere">Files with lyrics containing search query</string>
    <string name="ui_nothingwasfound">Nothing was found</string>
    <string name="ui_e_crit">Critical error</string>
    <string name="ui_submit">Submit</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_confirm">Confirm</string>
    <string name="ui_confirmation">Confirmation</string>
    <string name="ui_continue">Continue</string>
    <string name="ui_er_alert">Lyrics of all selected files will be erased. Continue?</string>
    <string name="ui_show">Show</string>
    <string name="ui_deselect">Deselect</string>
    <string name="ui_ph_gd_artist">Artist\'s name</string>
    <string name="ui_ph_gd_title">Song title</string>
    <string name="ui_gd_forcecase">Force characters\' case</string>
    <string name="ui_stop">Stop</string>
    <string name="ui_ph_squery">Search query</string>
    <string name="ui_snippet_prefix">Lyrics</string>
    <string name="about_content">Seventh Lyrics Manager is free opensource application that allows you to automagically download and write song lyrics into ID3v2 tag that included by the most of MP3 files. There is a lot of music players which are able to show song\'s lyric while playing it. \n
Developed by Miles Seventh, 2016\n
\n
DISCLAIMER\n
Seventh Lyrics Manager is provided by Miles Seventh "as is" and "with all faults". Developer makes no representations or warranties of any kind concerning the safety, suitability, lack of viruses, inaccuracies, typographical errors, or other harmful components of this software. You are solely responsible for the protection of your equipment and backup of your data, and the Developer will not be liable for any damages you may suffer in connection with using, modifying, or distributing this software.\n
\n
THIRD PARTY COMPONENTS\n
Application uses http://lyrics.wikia.com to fetch lyrics and mp3agic library (https://github.com/mpatric/mp3agic) to access ID3V2 tag.\n
\n
CONTACTS\n
http://github.com/MilesVII/slm_gui\n
milesseventh@gmail.com</string>
    <string name="ui_settings">Settings</string>
    <string name="ui_showing_big_selection_warning">Selection is too big to show. Continuing can overload CPU for some time</string>
    <string name="ui_exit">Close App</string>
    
    <string name="ui_set_shownots">Show notifications</string>
    <string name="ui_set_foc">Close processing dialog when completed</string>
    <string name="ui_set_showtag">Show track\'s name instead of filename while processing (Affects speed!)</string>
    <string name="ui_set_foc_short">Autoclose when processed</string>
    <string name="ui_set_showtag_short">Show real title</string>
    <string name="ui_set_queue_limit_short">Queue size limit</string>
    <string name="ui_set_queue_limit">Amount of files that can be processed with normal UI (Large queues can seriously affect speed)</string>
    <string name="ui_set_use_php_parser">Use custom PHP parser if lyrics can not be found (For advanced users)</string>
    <string name="ui_set_use_php_parser_short">Use custom PHP parser</string>
    <string name="ui_set_php_url">URL of PHP Script</string>    
    <string name="ui_set_php_url_cmnt">Use \"&lt;A&gt;\" and \"&lt;T&gt;\" where artist name and song title should be placed</string>
    
    <string name="ui_sdfix_caution">Seems like the version of your system is 
Android 4.4. The problem is that application cannot write to your sdcard without 
modification of some system files. This operation is harmless and doesn\'t affect system\'s 
stability. Without it, application will not be allowed to write data into files, but other 
functions will still be working. Continue and modify system files\?</string>
    <string name="ui_sdfix_done">Done! Reboot your device to apply changes.</string>
    <string name="ui_sdfix_e">Changes weren\'t applied. At least, we tried.</string>
    
    <string name="ui_stat_wait">File is in queue</string>
    <string name="ui_stat_processing">File is processing</string>
    <string name="ui_stat_processed">File is processed</string>
    
    <string name="ui_sdaccesswarning_title">SDCard access</string>
    <string name="ui_sdaccesswarning">Sorry, but application can not access your files being running on Android 5.0+</string>
</resources>
