<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.milesseventh.slm_gui.MainActivity" >

    <group 
        android:id="@+id/command_group" 
        android:visible="true" 
        android:enabled="true" 
        android:checkableBehavior="none" 
        android:orderInCategory="1">
        <item 
            android:id="@+id/act_gl" 
            android:checkable="false" 
            android:title="@string/menu_gl"/>
        <item 
            android:id="@+id/act_bd" 
            android:title="@string/menu_bd"/>
        <item 
            android:id="@+id/act_search" 
            android:title="@string/menu_search"/>
        
    </group>
    <item 
	    android:id="@+id/act_sl" 
	    android:title="@string/menu_sl" 
	    android:checkable="false"/>
    <item
     	android:id="@+id/action_about"
     	android:orderInCategory="2"
     	android:showAsAction="never"
     	android:title="@string/menu_about"/>
    <item 
        android:id="@+id/action_settings" 
        android:title="@string/ui_settings" 
        android:orderInCategory="3"/>
    <item 
        android:id="@+id/action_exit" 
        android:title="@string/ui_exit" 
        android:orderInCategory="5"/>
    <item android:id="@+id/action_sdaccess" android:title="@string/ui_sdaccesswarning_title" android:orderInCategory="0"></item>
</menu>
